--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,7 +15,7 @@
     />
     <style>
       :root {
-        --gradient: linear-gradient(90deg, #0fc4f1, #1228f3);
+        --gradient: linear-gradient(90deg, #00c9ff, #8ed9ff);
       }
 
       * {
