--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -140,7 +140,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-nd-6 col-lg-5">
-          <!-- <form method="POST" action="/add">
+          <form method="POST" action="/add">
             <input
               type="text"
               name="task"
@@ -148,7 +148,7 @@
               placeholder="enter a text"
             />
             <input type="submit" value="Add" />
-          </form> -->
+          </form>
         </div>
       </div>
       <!-- // -->
@@ -187,6 +187,13 @@
           <% } %>
         </form>
         <% } %>
+        <button
+            type="submit"
+            class="btn btn-danger mx-2"
+            formaction="/update"
+          >
+            Delete
+          </button>
       </div>
     </div>
     <div class="footer">
