--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -153,7 +153,7 @@
               type="text"
               name="task"
               id="task"
-              placeholder="enter a text"
+              placeholder="ENTER A TASK"
             />
             <input type="submit" value="Add" />
           </form>
