--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -97,6 +97,10 @@
         margin-left: 36%;
         font-size: large;
       }
+      .row input{
+        color: green;
+      }
+      
       .text {
         margin-top: 60px;
         font-size: x-large;
